[tool.poetry]
name = "truto-python-sdk"
version = "0.1.1"
description = "Python3 SDK for the Truto API"
authors = ["Roopendra Talekar <roopendratalekar@gmail.com>"]
readme = "README.md"
repository = "https://github.com/trutohq/truto-python-sdk"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.10.5"
asyncio = "3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
